# indico-cron-advanced-cleaner

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
indico_cron_advanced_cleaner/: __init__.py  features.py  plugin.py  tasks.py
