[metadata]
    name = indico-cron-advanced-cleaner
    url = https://github.com/bpedersen2/indico-cron-advanced-cleaner
    description = Regularly clean logs and anonymize registrations
    license = MIT
    author = MLZ Indico Team
    author_email = bjoern.pedersen@frm2.tum.de
    classifiers =
        Environment :: Plugins
        Environment :: Web Environment
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 3.9
[options]
    packages=find:
    zip_safe=False
    include_package_data=True
    install_requires=
           indico>=3.1
    use_scm_version={"write_to":"indico_cron_advanced_cleaner/version.py",
                     "local_scheme":"node-and-timestamp"},
    setup_requires =
            setuptools>=39
            setuptools_scm[toml]>=3.4
[options.entry_points]
    indico.plugins =
         cron_advanced_cleaner=indico_cron_advanced_cleaner.plugin:AdvancedCleanerCronjobsPlugin
